// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component where all selectors are in the stylesheets renders 1`] = `
.glamor-1,
[data-glamor-1] {
  color: red;
}

.glamor-0,
[data-glamor-0] {
  display: inline;
}

<p
  className="glamor-0 glamor-1"
/>
`;

exports[`component where none of the selectors are in the stylesheet renders 1`] = `
<p
  className="css-foo css-bar container"
/>
`;

exports[`component where some selectors are in the stylesheet renders 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline;
}

<p
  className="glamor-0 glamor-1 container"
/>
`;
